update comment and acitvities for issue + upload file